unpackaged/main/default/objects/Stage2_Opportunity_Snapshot__c/Stage2_Opportunity_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Stage 2 to 8 Opportunity analytical snapshot. A point of time Monthly.</description>
    <label>Stage 2 to 8 Opportunity Snapshot</label>
    <nameField>
        <label>Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage 2 to 8 Opportunity Snapshot2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>