unpackaged/main/default/objects/Stage2_Opportunity_Snapshot__c/fields/Industry_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Industry_Vertical__c</fullName>
    <label>Industry/Vertical</label>
    <length>50</length>
    <type>Text</type>
</CustomField>