unpackaged/main/default/objects/Stage2_Opportunity_Snapshot__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <inlineHelpText>Opportunity ID - Reference Number</inlineHelpText>
    <label>Opportunity ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>