unpackaged/main/default/objects/Stage2_Opportunity_Snapshot__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>